force-app/main/default/objects/Lead_MGM_Report_Scheduler__c/Lead_MGM_Report_Scheduler__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Lead MGM Report Scheduler</label>
</CustomObject>