force-app/main/default/objects/Lead_MGM_Report_Scheduler__c/fields/CRON_TIME__c.field-meta.xml
<CustomField>
    <fullName>CRON_TIME__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CRON_TIME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>