force-app/main/default/objects/Lead_MGM_Report_Scheduler__c/fields/Report_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_API_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Report API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>