force-app/main/default/objects/Lead_MGM_Report_Scheduler__c/fields/User_Role_List__c.field-meta.xml
<CustomField>
    <fullName>User_Role_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>User Role List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>